[project]
name = "python-concurrency-roadmap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kunal Suri", email = "kunal.suri.ml.experiments@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.11.18",
    "curio",
    "httpx>=0.28.1",
    "memory-profiler>=0.61.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "tqdm>=4.67.1",
]

[project.scripts]
python-concurrency-roadmap = "python_concurrency_roadmap:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
curio = { git = "https://github.com/dabeaz/curio.git", rev = "master" }
